# wimproved.vim

./: .clang-format  LICENSE  README  README.md  appveyor.yml  make.cmd  package.json  run-tests.ps1  wimproved.c
autoload/: wimproved.vim
doc/: CMakeLists.txt  wimproved.txt
test/: Take-Vim-Screenshot.ps1  wtoggleclean-test.js
